--- a/app/assets/stylesheets/pages/components.scss
+++ b/app/assets/stylesheets/pages/components.scss
@@ -63,7 +63,7 @@ label{
   }
 }
 
-.panel-thekanko{
+.panel-wadealike{
   border-radius: 0px;
   box-shadow: none;
   padding: 30px;
@@ -109,7 +109,7 @@ label{
   margin-right: 20px;
 }
 
-.nav-thekanko {
+.nav-wadealike {
   li {
     a {
       &, &:visited, &:link, &:active {
@@ -132,11 +132,11 @@ label{
   }
 }
 
-.nav-thekanko-lg {
+.nav-wadealike-lg {
   margin-bottom: 15px;
 }
 
-.nav-thekanko-green{
+.nav-wadealike-green{
   li.active{
     a{
       &, &:hover, &:active, &:link, &:visited{
@@ -146,7 +146,7 @@ label{
   }
 }
 
-.nav-tabs-thekanko{
+.nav-tabs-wadealike{
   margin-bottom: 15px;
   &.nav-justified{
     margin-bottom: 15px;}
