--- a/app/views/client/profiles/settings.html.erb
+++ b/app/views/client/profiles/settings.html.erb
@@ -135,7 +135,7 @@
             <% end %>
 
             <div class="col-xs-12">
-              <button class="btn btn-thekanko btn-thekanko-green-1">Update</button>
+              <button class="btn btn-wadealike btn-wadealike-green-1">Update</button>
             </div>
           </div>
         <% end %>
@@ -161,7 +161,7 @@
               <%= f.password_field :new_password_confirm, class: 'form-control' %>
             </div>
             <div class="col-xs-12">
-              <button class="btn btn-thekanko btn-thekanko-green-1">Change Password</button>
+              <button class="btn btn-wadealike btn-wadealike-green-1">Change Password</button>
             </div>
           </div>
         <% end %>
