--- a/app/views/errors/internal_server_error.html.erb
+++ b/app/views/errors/internal_server_error.html.erb
@@ -8,7 +8,7 @@
   p {
     font-size: 24px;
   }
-  a.btn-thekanko {
+  a.btn-wadealike {
     margin: 20px 0px;
   }
 </style>
@@ -18,7 +18,7 @@
       <h1>ERROR 500</h1>
       <p>Something get wrong but it's ok because....</p>
       <h2>"A person who never made a mistake never tried anything new."</h2>
-      <a href="/" class="btn btn-thekanko btn-thekanko-green-2 btn-lg">ค้นหากิจกรรมและอีเว้นท์ที่น่าสนใจ</a>
+      <a href="/" class="btn btn-wadealike btn-wadealike-green-2 btn-lg">ค้นหากิจกรรมและอีเว้นท์ที่น่าสนใจ</a>
     </div>
   </div>
 </div>
