--- a/app/views/greetings/about.html.erb
+++ b/app/views/greetings/about.html.erb
@@ -20,32 +20,32 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-offset-2 col-lg-8 col-md-12 col-sm-12 content">
-        <h3>TheKanko คืออะไร?</h3>
+        <h3>WadeAlike คืออะไร?</h3>
         <p>
-          TheKanko (อ่านว่า เดย์แดช) คือเว็บไซต์และแอปพลิเคชั่นที่คัดเลือกกิจกรรมและอีเว้นท์ดีๆ สนุกๆ ที่ตรงกับไลฟ์สไตล์ของคนเมือง โดยสามารถซื้อบัตรและชำระเงินเพื่อเข้าร่วมอีเว้นท์หรือกิจกรรมได้โดยตรงผ่านทางแอพพลิเคชั่นและเว็บไซต์ได้ง่ายๆ ไม่ต้องวางแผนล่วงหน้านานๆ
+          WadeAlike (อ่านว่า เดย์แดช) คือเว็บไซต์และแอปพลิเคชั่นที่คัดเลือกกิจกรรมและอีเว้นท์ดีๆ สนุกๆ ที่ตรงกับไลฟ์สไตล์ของคนเมือง โดยสามารถซื้อบัตรและชำระเงินเพื่อเข้าร่วมอีเว้นท์หรือกิจกรรมได้โดยตรงผ่านทางแอพพลิเคชั่นและเว็บไซต์ได้ง่ายๆ ไม่ต้องวางแผนล่วงหน้านานๆ
         </p>
         <p>
-          เราสร้าง TheKanko ขึ้นมาเพราะเราเชื่อว่าชีวิตยังมีเรื่องราวหรือประสบการณ์อีกมากมายให้คุณได้ลองเข้าไปสัมผัส เป้าหมายของเราจึงเป็นการสนับสนุนให้ทุกคนได้ได้รับประสบการณ์ใหม่ๆ ที่นอกเหนือจากการใช้ชีวิตประจำวัน ผ่านการทำกิจกรรม การเข้าร่วมอีเว้นท์ที่แปลกใหม่ หรือแม้กระทั่งท่องเที่ยวไปในที่ที่ไม่เคยไป
+          เราสร้าง WadeAlike ขึ้นมาเพราะเราเชื่อว่าชีวิตยังมีเรื่องราวหรือประสบการณ์อีกมากมายให้คุณได้ลองเข้าไปสัมผัส เป้าหมายของเราจึงเป็นการสนับสนุนให้ทุกคนได้ได้รับประสบการณ์ใหม่ๆ ที่นอกเหนือจากการใช้ชีวิตประจำวัน ผ่านการทำกิจกรรม การเข้าร่วมอีเว้นท์ที่แปลกใหม่ หรือแม้กระทั่งท่องเที่ยวไปในที่ที่ไม่เคยไป
         </p>
 
-        <h3>TheKanko มีกิจกรรมอะไรบ้าง?</h3>
+        <h3>WadeAlike มีกิจกรรมอะไรบ้าง?</h3>
         <p>
           เราทุกคนล้วนมีความชอบและความสนใจที่หลากหลาย ตอนเช้าเราอาจจะออกกำลังกาย ตกบ่ายอยากจะหาร้านนั่งชิว พอหัวค่ำก็อยากจะหาดนตรีฟัง กิจกรรมและอีเว้นท์ที่เราคัดมาจึงมีหลายหมวดหมู่แต่มีจุดเชื่อมโยงคือต้องสนุก แปลกใหม่ เพื่อสร้างประสบการณ์ที่ดีที่สุดให้กับชีวิตทุกครั้งที่ได้ทำ
         </p>
 
         <div class="row">
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-            <img src="about-thekanko-entertainment.jpg" width="100%">
+            <img src="about-wadealike-entertainment.jpg" width="100%">
             <h4 style="text-align: center;">Entertainment</h4>
             <p>Live music, party, movie & theater, performance, culture, food & drink</p>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-            <img src="about-thekanko-art.jpg" width="100%">
+            <img src="about-wadealike-art.jpg" width="100%">
             <h4 style="text-align: center;">Art & Culture</h4>
             <p>coffee brewing, painting, cooking, craft, bartender, dancing, photographing, cooking class, etc.</p>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-            <img src="about-thekanko-sport.jpg" width="100%">
+            <img src="about-wadealike-sport.jpg" width="100%">
             <h4 style="text-align: center;">Fitness & Sport</h4>
             <p>Fitness Training Class, Outdoor Activity, Yoga Class, Extreme Sport, Sport Competition etc.</p>
           </div>
@@ -53,7 +53,7 @@
 
         <h3>ติดต่อเรา</h3>
         <p>
-          หากคุณมีคำถาม ข้อสงสัย เสมอแนะ สามารถติดต่อเราได้ที่อีเมล์ <a href="mailto:hello@thekanko.com" target="_blank">hello@thekanko.com</a> หรือทาง Line: <a href="https://line.me/ti/p/@thekanko" target="_blank">@thekanko</a>
+          หากคุณมีคำถาม ข้อสงสัย เสมอแนะ สามารถติดต่อเราได้ที่อีเมล์ <a href="mailto:hello@wadealike.com" target="_blank">hello@wadealike.com</a> หรือทาง Line: <a href="https://line.me/ti/p/@wadealike" target="_blank">@wadealike</a>
         </p>
       </div>
     </div>
