--- a/app/views/greetings/landing.html.erb
+++ b/app/views/greetings/landing.html.erb
@@ -20,17 +20,17 @@
               <div class="col-xs-12 col-md-6 right">
                 <div class="cover-profile">
                   <div class="masthead-brand">
-                        <img src="img/thekanko-logo-dark.png" alt="TheKanko">
+                        <img src="img/wadealike-logo-dark.png" alt="WadeAlike">
                       </div>
               <h1>เพราะเราเชื่อว่า ชีวิตไม่ได้มีแค่ด้านเดียว</h1>
               <h2>
-            เตรียมพบกับ TheKanko แอพฯ ที่ช่วยให้คุณค้นพบกิจกรรม และอีเว้นท์เจ๋งๆ ที่ตรงกับไลฟ์สไตล์ของคุณ ร่วมค้นหาประสบการณ์ใหม่ๆ กับเราได้ก่อนใคร เพียงกรอกอีเมลด้านล่าง
+            เตรียมพบกับ WadeAlike แอพฯ ที่ช่วยให้คุณค้นพบกิจกรรม และอีเว้นท์เจ๋งๆ ที่ตรงกับไลฟ์สไตล์ของคุณ ร่วมค้นหาประสบการณ์ใหม่ๆ กับเราได้ก่อนใคร เพียงกรอกอีเมลด้านล่าง
               </h2>
 
               <div class="signup signuptop">
                 <!-- Begin MailChimp Signup Form -->
                 <div id="mc_embed_signup">
-                <form action="//thekanko.us13.list-manage.com/subscribe/post?u=17a658be2948b8e8af797778c&amp;id=28a8c4f0fb" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <form action="//wadealike.us13.list-manage.com/subscribe/post?u=17a658be2948b8e8af797778c&amp;id=28a8c4f0fb" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll">
 
                 <div class="mc-field-group">
@@ -52,20 +52,20 @@
               </div>
 
               <!-- fb like box -->
-              <!-- <div class="fb-like" data-href="https://facebook.com/thekankoapp" data-width="400" data-layout="standard" data-action="like" data-show-faces="false" data-share="true"></div> -->
+              <!-- <div class="fb-like" data-href="https://facebook.com/wadealikeapp" data-width="400" data-layout="standard" data-action="like" data-show-faces="false" data-share="true"></div> -->
               <!-- end fb like box -->
 
               <!-- footer: blog & social -->
               <div class="footer">
 
                 <div class="blog">
-                  <strong>อ่าน Blog → </strong><a href="https://thekanko.com/blog/weekend-activities-for-couple-in-bangkok/" title="5 กิจกรรมสนุกๆ สำหรับคู่รัก แล้ววันเดทจะไม่น่าเบื่ออีกต่อไป">5 กิจกรรมสนุกๆ สำหรับคู่รัก แล้ววันเดทจะไม่น่าเบื่ออีกต่อไป</a>
+                  <strong>อ่าน Blog → </strong><a href="https://wadealike.com/blog/weekend-activities-for-couple-in-bangkok/" title="5 กิจกรรมสนุกๆ สำหรับคู่รัก แล้ววันเดทจะไม่น่าเบื่ออีกต่อไป">5 กิจกรรมสนุกๆ สำหรับคู่รัก แล้ววันเดทจะไม่น่าเบื่ออีกต่อไป</a>
                 </div>
 
                 <div class="social">
                   Follow us:
-                  <a href="https://www.facebook.com/thekankoapp/" target="_blank"><img src="img/icon-fb.png" width="30"></a>
-                  <a href="https://www.instagram.com/thekankoapp/" target="_blank"><img src="img/icon-ig.png" width="30"></a>
+                  <a href="https://www.facebook.com/wadealikeapp/" target="_blank"><img src="img/icon-fb.png" width="30"></a>
+                  <a href="https://www.instagram.com/wadealikeapp/" target="_blank"><img src="img/icon-ig.png" width="30"></a>
                 </div>
 
               </div>
