--- a/app/views/mailers/user/order.html.erb
+++ b/app/views/mailers/user/order.html.erb
@@ -65,7 +65,7 @@
                       </table>
                       <p style="font-weight: 200; padding-bottom: 30px;">
                         2. แจ้งยืนยันการชำระเงินโดยส่งรูปถ่ายหลักฐานการโอนเงิน<br />
-                        พร้อมรหัสการโอนเงิน <strong style="color: #21A4A5; "><%= @order.code %></strong> ผ่านทาง: Line <a href="https://line.me/ti/p/@thekanko" target="_blank">@thekanko</a> (มี @ ข้างหน้า)
+                        พร้อมรหัสการโอนเงิน <strong style="color: #21A4A5; "><%= @order.code %></strong> ผ่านทาง: Line <a href="https://line.me/ti/p/@wadealike" target="_blank">@wadealike</a> (มี @ ข้างหน้า)
                       </p>
                       <p style="font-weight: 200; padding-bottom: 30px;">
                         3. เราจะส่งบัตรให้คุณทางอีเมลเมื่อเราได้รับแจ้งยืนยันการชำระเงินแล้วภายใน 4 ชั่วโมง :)
@@ -84,7 +84,7 @@
                         <tr>
                           <td align="center" style="background: #DFFFFB; padding: 15px; font-size: 14px; font-weight: 200;">
                             หากคุณพบปัญหาหรือมีคำถาม ต้องการความช่วยเหลือ สามารถติดต่อเราได้ที่<br />
-                            Tel. 080-456-9465  หรือ Line: <a href="https://line.me/ti/p/@thekanko" target="_blank">@thekanko</a>
+                            Tel. 080-456-9465  หรือ Line: <a href="https://line.me/ti/p/@wadealike" target="_blank">@wadealike</a>
                           </td>
                         </tr>
                       </table>
