--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -18,8 +18,8 @@
         <div class="list-panel">
           <div class="list-title">Support</div>
           <ul class="list-body nav">
-            <!-- <li><a href="/">List Event on TheKanko</a></li> -->
-            <li><a href="https://thekanko.com/blog/" target="_blank">TheKanko Blog</a></li>
+            <!-- <li><a href="/">List Event on WadeAlike</a></li> -->
+            <li><a href="https://wadealike.com/blog/" target="_blank">WadeAlike Blog</a></li>
             <li><a href="/about">About</a></li>
             <!-- <li><a href="/">How to Pay</a></li> -->
             <!-- <li><a href="/">FAQ</a></li> -->
@@ -55,7 +55,7 @@
         </div>
 
         <div class="fb-page"
-             data-href="https://www.facebook.com/thekankoapp/"
+             data-href="https://www.facebook.com/wadealikeapp/"
              data-small-header="true"
              data-adapt-container-width="true"
              data-hide-cover="false"
@@ -75,8 +75,8 @@
         </div> -->
 
         <div>
-          <div>© 2016 TheKanko.com</div>
-          <!-- <div class="copyright">© 2016 TheKanko.com</div> -->
+          <div>© 2016 WadeAlike.com</div>
+          <!-- <div class="copyright">© 2016 WadeAlike.com</div> -->
           <ul class="list-body list-inline">
             <li>
               <%#= link_to "Terms & Conditions", terms_and_conditions_path %>
