--- a/app/views/partials/_login-form.html.erb
+++ b/app/views/partials/_login-form.html.erb
@@ -23,7 +23,7 @@
           <label>Your Password</label>
           <%= f.password_field :password, class: 'form-control' %>
         </div>
-        <%= f.submit "Login", class: 'btn btn-block btn-thekanko btn-thekanko-green-1' %>
+        <%= f.submit "Login", class: 'btn btn-block btn-wadealike btn-wadealike-green-1' %>
         <div class="forgot-password">
           <%= link_to "Forgot Password?", new_password_path(resource_name) %>
         </div>
