--- a/app/views/user/passwords/new.html.erb
+++ b/app/views/user/passwords/new.html.erb
@@ -23,7 +23,7 @@
 
           <div class="form-group">
             <div class="col-xs-12">
-              <button class="btn btn-thekanko btn-thekanko-green-2 btn-block" type="submit">Send me reset password instructions</button>
+              <button class="btn btn-wadealike btn-wadealike-green-2 btn-block" type="submit">Send me reset password instructions</button>
             </div>
           </div>
         <% end %>
