--- a/app/views/client/profiles/parts/_payment.html.erb
+++ b/app/views/client/profiles/parts/_payment.html.erb
@@ -44,7 +44,7 @@
 </table>
 <p style="font-weight: 200; padding-bottom: 30px;">
   2. แจ้งยืนยันการชำระเงินโดยส่งรูปถ่ายหลักฐานการโอนเงิน<br />
-  พร้อมรหัสการโอนเงิน ผ่านทาง: Line <a href="https://line.me/ti/p/@thekanko" target="_blank">@thekanko</a> (มี @ ข้างหน้า)
+  พร้อมรหัสการโอนเงิน ผ่านทาง: Line <a href="https://line.me/ti/p/@wadealike" target="_blank">@wadealike</a> (มี @ ข้างหน้า)
 </p>
 <p style="font-weight: 200; padding-bottom: 30px;">
   3. เราจะส่งบัตรให้คุณทางอีเมลเมื่อเราได้รับแจ้งยืนยันการชำระเงินแล้วภายใน 4 ชั่วโมง :)
