--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -13,7 +13,7 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>TheKanko</title>
+      <title>WadeAlike</title>
       <style type="text/css">
          p{
          margin:10px 0;
@@ -506,7 +506,7 @@
                                                             <tbody>
                                                                <tr>
                                                                   <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
-                                                                     <p style="text-align: left;">© 2016 TheKanko.com</p>
+                                                                     <p style="text-align: left;">© 2016 WadeAlike.com</p>
                                                                      <!-- <p style="text-align: left;">Our mailing address is: 1120/337 Sukhumvit road, Klongtoey, Bangkok 10110 Thailand</p>
  -->                                                                  </td>
                                                                </tr>
