--- a/app/views/partials/_register-form.html.erb
+++ b/app/views/partials/_register-form.html.erb
@@ -31,7 +31,7 @@
           <label>Your Password</label>
           <%= f.password_field :password, class: 'form-control' %>
         </div>
-        <%= f.submit "Signup Free!", class: 'btn btn-block btn-thekanko btn-thekanko-green-1' %>
+        <%= f.submit "Signup Free!", class: 'btn btn-block btn-wadealike btn-wadealike-green-1' %>
       </div>
       <div class="modal-footer">
         <div>
