--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,51 +1,16 @@
-<!doctype html>
-<html class="no-js" lang="en">
+
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>WadeAlike.com</title>
-
-    <%= csrf_meta_tags %>
-
-    <meta name="description" content="">
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <!-- Place favicon.ico in the root directory -->
-    <link rel="stylesheet" href="/css/vendor.css">
-    <!-- Theme initialization -->
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <title>WakeAlike.com</title>
+    <%= csrf_meta_tags %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application' %>
   </head>
   <body>
-
     <%= yield %>
-
-    <!-- Reference block for JS -->
-    <div class="ref" id="ref">
-      <div class="color-primary"></div>
-      <div class="chart">
-        <div class="color-primary"></div>
-        <div class="color-secondary"></div>
-      </div>
-    </div>
-    <script>
-      (function(i, s, o, g, r, a, m)
-      {
-          i['GoogleAnalyticsObject'] = r;
-          i[r] = i[r] || function()
-          {
-              (i[r].q = i[r].q || []).push(arguments)
-          }, i[r].l = 1 * new Date();
-          a = s.createElement(o),
-              m = s.getElementsByTagName(o)[0];
-          a.async = 1;
-          a.src = g;
-          m.parentNode.insertBefore(a, m)
-      })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-      ga('create', 'UA-80463319-2', 'auto');
-      ga('send', 'pageview');
-    </script>
-    <script src="/js/vendor.js"></script>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   </body>
 </html>
