--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -7,7 +7,7 @@
     <title>WadeAlike.com</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag 'client', media: 'all', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag 'client/frontend', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'webpack-bundle' %>
     <%= javascript_include_tag '//maps.googleapis.com/maps/api/js' %>
   </head>
