--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -205,7 +205,7 @@
               </ul>
             </nav>
           </div>
-          <footer class="sidebar-footer">
+          <%#<footer class="sidebar-footer">
             <ul class="nav metismenu" id="customize-menu">
               <li>
                 <ul>
@@ -271,7 +271,7 @@
                 <a href=""> <i class="fa fa-cog"></i> Customize </a>
               </li>
             </ul>
-          </footer>
+          </footer>%>
         </aside>
         <div class="sidebar-overlay" id="sidebar-overlay"></div>
         <article class="content dashboard-page">
