--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -14,7 +14,7 @@
     <!-- Place favicon.ico in the root directory -->
     <link rel="stylesheet" href="/css/vendor.css">
     <!-- Theme initialization -->
-    <%= stylesheet_link_tag    'admin/app', media: 'all', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag    'admin/base', media: 'all', 'data-turbolinks-track' => true %>
   </head>
   <body>
 
@@ -28,6 +28,7 @@
         <div class="color-secondary"></div>
       </div>
     </div>
+
     <script>
       (function(i, s, o, g, r, a, m)
       {
@@ -42,7 +43,7 @@
           a.src = g;
           m.parentNode.insertBefore(a, m)
       })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-      ga('create', 'UA-80463319-2', 'auto');
+      ga('create', "<%= App.configure.ga_tracking_code %>", 'auto');
       ga('send', 'pageview');
     </script>
     <script src="/js/vendor.js"></script>
