--- a/app/views/organizer/profiles/index.html.erb
+++ b/app/views/organizer/profiles/index.html.erb
@@ -21,7 +21,7 @@
       <% @organizers.each do |organizer| %>
           <div class="col-sm-6 col-md-4 event-wrapper">
             <%= link_to organizer_path(organizer), class: "event card" do %>
-              <div class="cover" style="background-image: url('<%= organizer.picture(:medium) %>');">
+              <div class="cover" style="background-image: url('<%= organizer.picture(:medium) %>');"></div>
               <div class="info" style="min-height: auto;">
                 <h4 class="title text-left" style="height: auto;"><%= organizer.company %></h4>
                 <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= organizer.company %></div>
