--- a/app/views/organizer/profiles/index.html.erb
+++ b/app/views/organizer/profiles/index.html.erb
@@ -22,8 +22,8 @@
           <div class="col-sm-6 col-md-4 event-wrapper">
             <%= link_to organizer_path(organizer), class: "event card" do %>
               <div class="cover" style="background-image: url('<%= organizer.picture(:medium) %>');"></div>
-              <div class="info" style="min-height: auto;">
-                <h4 class="title text-left" style="height: auto;"><%= organizer.company %></h4>
+              <div class="info" style="min-height: 150px;">
+                <h4 class="title text-left" style="height: 25px;"><%= organizer.company %></h4>
                 <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= organizer.email %></div>
                 <div class="meta location"><i class="icon icon-xs icon-location"></i> <%= organizer.short_description %></div>
               </div>
